Added Manage Products

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
 @tailwind utilities;
 
 @layer base {
-    html {
+    #root {
+        width: 100vw;
+        height: 100vh;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 }
